ahte-practise/Ingress/ingressrule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ab550ff7205514f7389e74590428dc92-1403811137.ap-south-1.elb.amazonaws.com
    http:
      paths:
        
         -  path: /
            pathType: Prefix
            backend:
              service: 
                name: nginxsrv
                port:
                  number: 80
         -  path: /tomcat
            pathType: Prefix
            backend:
              service: 
                name: tomcatsrv
                port:
                  number: 8080
